smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/version/unsupported-version.smithy
// Syntax error at line 2, column 16: Unsupported Smithy version number: 999
$version: "999"
